# claude-for-legal-chile

./: .gitignore  CONNECTORS.md  CONTRIBUTING.md  QUICKSTART.md  README.md
.claude-plugin/: marketplace.json
.github/PULL_REQUEST_TEMPLATE/: validacion-legal.md
.github/workflows/: audit.yml
ai-governance-legal/: .mcp.json  CLAUDE.md
ai-governance-legal/.claude-plugin/: plugin.json
ai-governance-legal/references/: currency-watch.md
chile/: CHANGELOG.md  CLAUDE.md  COMPARACION-SKILL.md  COVERAGE-DETAIL.html  COVERAGE-GAPS.json  COVERAGE-MAP.html  COVERAGE-MAP.json  COVERAGE-STATUS.md  MARCADORES.md  PENDIENTES-ARBOL.md  PLAN-SKILLS.md  README.md  REFRESH-PLAN.md  RETOMAR-ARBOL.md  RETOMAR-BCN.md  VALIDACION.md
chile/.claude-plugin/: plugin.json
chile/audits/: README.md  bcn-audit-2026-05-20-resumen.md  cobertura-leyes-2026-05-21.md  codigo-civil-hallazgos.md  codigo-comercio-hallazgos.md  codigo-organico-tribunales-hallazgos.md  codigo-penal-hallazgos.md  codigo-procedimiento-civil-hallazgos.md  codigo-procesal-penal-hallazgos.md  codigo-trabajo-hallazgos.md  codigo-tributario-hallazgos.md  densidad-grafo-2026-05-21.md  dfl-1122-codigo-aguas-hallazgos.md  dfl-458-urbanismo-construcciones-hallazgos.md  dfl-725-codigo-sanitario-hallazgos.md  dl-1939-bienes-estado-hallazgos.md  ley-10336-cgr-hallazgos.md  ley-14908-alimentos-hallazgos.md  ley-17288-monumentos-nacionales-hallazgos.md  ley-18010-operaciones-credito-dinero-hallazgos.md  ley-18045-mercado-valores-hallazgos.md  ley-18092-letras-pagares-hallazgos.md  ley-18097-concesiones-mineras-hallazgos.md  ley-18248-codigo-mineria-hallazgos.md  ley-18575-bases-administracion-estado-hallazgos.md  ley-18834-estatuto-administrativo-hallazgos.md  ley-18840-loc-banco-central-hallazgos.md  ley-18883-estatuto-administrativo-municipal-hallazgos.md  ley-18892-pesca-acuicultura-hallazgos.md  ley-19123-reparacion-rettig-hallazgos.md  ley-19300-medio-ambiente-hallazgos.md  ley-19378-aps-municipal-salud-hallazgos.md  ley-19537-copropiedad-inmobiliaria-hallazgos.md  ley-19628-proteccion-datos-hallazgos.md  ley-19880-procedimiento-administrativo-hallazgos.md  ley-19886-compras-publicas-hallazgos.md  ley-19947-matrimonio-civil-hallazgos.md  ley-19966-auge-ges-hallazgos.md  ley-19968-tribunales-familia-hallazgos.md  ley-19992-reparacion-valech-hallazgos.md  (+27 more)
chile/ejemplos/: README.md  administrativo-01-cese-contrata-confianza-legitima.md  civil-01-vicios-ocultos-inmueble.md  concursal-01-reorganizacion-vs-liquidacion.md  familia-01-divorcio-bienes-mismo-sexo.md  laboral-02-despido-fuero-maternal.md  laboral-03-reconducir-honorarios.md  penal-01-defensa-formalizacion-delito-economico.md  privacidad-01-brecha-datos.md  societario-01-disenar-mpd.md  societario-02-conflicto-interes-director.md  tributario-01-iva-servicios-profesionales-pj.md  tributario-02-reclamo-liquidacion-tta.md
chile/legalchile/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml
chile/perfiles/: README.md  administrativo.md  civil.md  concursal.md  familia.md  laboral.md  penal.md  privacidad.md  societario.md  tributario.md
chile/scripts/: MCP-OVERVIEW.md  articulos-close.sh  audit-embeddings.py  (+58 more)
chile/scripts/mcp/: DEMO.md  INSTALL.md  README.md  pyproject.toml
chile/scripts/mcp-banco-central/: README.md  pyproject.toml
chile/scripts/mcp-banco-central/src/mcp_banco_central/: __init__.py  bcch_client.py  server.py
chile/scripts/mcp-bcn-tramitacion/: README.md  pyproject.toml
chile/scripts/mcp-bcn-tramitacion/src/mcp_bcn_tramitacion/: __init__.py  server.py  tramitacion_client.py
chile/scripts/mcp-cgr-dictamenes/: README.md  pyproject.toml
chile/scripts/mcp-cgr-dictamenes/src/mcp_cgr_dictamenes/: __init__.py  cgr_client.py  server.py
chile/scripts/mcp-cmf/: README.md  pyproject.toml
chile/scripts/mcp-cmf/src/mcp_cmf/: __init__.py  cmf_client.py  server.py
chile/scripts/mcp-corpus-search/: README.md  pyproject.toml
chile/scripts/mcp-corpus-search/src/mcp_corpus_search/: __init__.py  citation.py  search_client.py  server.py
chile/scripts/mcp-diario-oficial/: README.md  pyproject.toml
chile/scripts/mcp-diario-oficial/src/mcp_diario_oficial/: __init__.py  do_client.py  server.py
chile/scripts/mcp-dt-dictamenes/: README.md  pyproject.toml
chile/scripts/mcp-dt-dictamenes/src/mcp_dt_dictamenes/: __init__.py  dt_client.py  server.py
chile/scripts/mcp-fne/: pyproject.toml
chile/scripts/mcp-fne/src/mcp_fne/: __init__.py  fne_client.py  server.py
chile/scripts/mcp-pjud/: README.md  pyproject.toml
chile/scripts/mcp-pjud/src/mcp_pjud/: __init__.py  server.py
chile/scripts/mcp-sernac/: README.md  pyproject.toml
chile/scripts/mcp-sernac/src/mcp_sernac/: __init__.py  sernac_client.py  server.py
chile/scripts/mcp-sii-juris/: README.md  pyproject.toml
chile/scripts/mcp-sii-juris/src/mcp_sii_juris/: __init__.py  server.py  sii_client.py
chile/scripts/mcp-tc-fallos/: README.md  pyproject.toml
chile/scripts/mcp-tc-fallos/src/mcp_tc_fallos/: __init__.py  server.py  tc_client.py
chile/scripts/mcp-tdlc/: README.md  pyproject.toml
chile/scripts/mcp-tdlc/src/mcp_tdlc/: __init__.py  server.py  tdlc_client.py
chile/scripts/mcp/fixtures/: ley-21400.xml
chile/scripts/mcp/src/mcp_bcn_leychile/: __init__.py  bcn_client.py  cli.py  local_catalog.py  server.py
chile/scripts/mcp/tests/: test_bcn_client.py  test_local_catalog.py
commercial-legal/: .mcp.json  CLAUDE.md  README.md
corporate-legal/: CLAUDE.md  README.md
employment-legal/: .mcp.json  CLAUDE.md
ip-legal/: .mcp.json  CLAUDE.md  README.md
law-student/: .mcp.json  CLAUDE.md  README.md
legal-builder-hub/: CLAUDE.md
legal-clinic/: .mcp.json  CLAUDE.md  README.md
litigation-legal/: .mcp.json  CLAUDE.md  README.md
managed-agent-cookbooks/: README.md
privacy-legal/: .mcp.json  CLAUDE.md
product-legal/: .mcp.json  CLAUDE.md  README.md
regulatory-legal/: .mcp.json  CLAUDE.md  README.md
scripts/: deploy-managed-agent.sh  lint-tool-scope.py  orchestrate.py  test-cookbooks.sh  validate.py
(+178648 files in other folders)
