[project]
name = "mcp-cmf"
version = "0.1.0"
description = "MCP server para CMF Chile (Normas de Carácter General + Circulares)"
authors = [{name = "Unholster", email = "antonio@unholster.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["mcp>=0.9.0"]

[project.scripts]
mcp-cmf = "mcp_cmf.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_cmf"]
