[project]
name = "mcp-corpus-search"
version = "0.1.0"
description = "MCP server para búsqueda full-text sobre corpus legal chileno offline"
authors = [{name = "Unholster", email = "antonio@unholster.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["mcp>=0.9.0", "anthropic>=0.40.0"]

[project.scripts]
mcp-corpus-search = "mcp_corpus_search.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_corpus_search"]
