[project]
name = "mcp-diario-oficial"
version = "0.1.0"
description = "MCP server para Diario Oficial de Chile"
authors = [{name = "Unholster", email = "antonio@unholster.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/diazaraujo/claude-for-legal-chile"

[project.scripts]
mcp-diario-oficial = "mcp_diario_oficial.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_diario_oficial"]
