[project]
name = "mcp-pjud"
version = "0.1.0"
description = "MCP stub para Portal Unificado Sentencias PJUD (pendiente browser automation)"
authors = [{name = "Unholster", email = "antonio@unholster.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["mcp>=0.9.0"]

[project.scripts]
mcp-pjud = "mcp_pjud.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_pjud"]
