[project]
name = "mcp-bcn-leychile"
version = "0.6.0"
description = "MCP server para consultar normativa chilena vía BCN/LeyChile en tiempo real"
authors = [{name = "Unholster", email = "antonio@unholster.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/diazaraujo/claude-for-legal-chile"
Documentation = "https://github.com/diazaraujo/claude-for-legal-chile/tree/main/chile/scripts/mcp"

[project.scripts]
mcp-bcn-leychile = "mcp_bcn_leychile.server:main"
mcp-bcn-cli = "mcp_bcn_leychile.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_bcn_leychile"]
